# stock-alert

./: .gitignore  README.md  pyproject.toml  stock_check.py
.github/workflows/: ci-workflow.yaml  scheduled-report.yaml
dashboard/pages/: 📈_stock_analysis.py
notebooks/: data_analysis.ipynb
scripts/: run_stock_check.py
src/common/: logger.py
src/dashboard/: 🏡_Home.py
src/dashboard/pages/: 📈_stock_analysis.py
src/stock_alert/: __init__.py  exporter.py  fetcher.py  pipeline.py  stock_check.py  transformer.py
src/stock_alert/features/: __init__.py  atomic_features.py  base.py  feature_base.py  moving_average.py
tests/: conftest.py  test_stock_check.py
tests/features/: __init__.py  conftest.py  test_atomic_features.py  test_feature_engine.py  test_moving_average.py
