[tool.poetry]
name = "stock-alert"
version = "0.1.0"
description = "Stock Alert project"
authors = ["José Castro <zediogo2@gmail.com>"]
readme = "README.md"
packages = [{ include = "stock_alert", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
yfinance = ">=0.2.65,<0.3.0"
pandas = ">=2.3.2,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
